--- a/examples/nginx-reverse-proxy/nginx.conf.erb
+++ b/examples/nginx-reverse-proxy/nginx.conf.erb
@@ -1,11 +1,11 @@
 user nginx;
-worker_processes 4;
+worker_processes auto;
 
 error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
 events {
-  worker_connections  1024;
+  worker_connections  2048;
 }
 
 http {
@@ -48,10 +48,6 @@ http {
 
     keepalive_timeout 5;
 
-    if ($request_uri ~ /health_check) {
-      set $action "${action}_health_check";
-    }
-
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
@@ -61,11 +57,6 @@ http {
       proxy_send_timeout 60;
 
       proxy_pass $upstream_endpoint;
-    }
-
-    error_page 500 502 503 504 /500.html;
-    location = /500.html {
-      root /srv/www/hats/current/public/;
     }
   }
 }
