--- a/dockerfiles/reverse-proxy/templates/server.conf.erb
+++ b/dockerfiles/reverse-proxy/templates/server.conf.erb
@@ -28,17 +28,24 @@ server {
   ssl_prefer_server_ciphers on;
   <% end %>
 
+  <% if decorator.proxy_protocol %>
   set_real_ip_from 10.0.0.0/8;
   real_ip_header proxy_protocol;
+  <% end %>
 
   keepalive_timeout 5;
 
   location / {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
+    <% if decorator.proxy_protocol %>
     proxy_set_header X-Real-IP         $proxy_protocol_addr;
     proxy_set_header X-Forwarded-For   $proxy_protocol_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
+    <% else %>
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    <% end %>
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
