--- a/dockerfiles/reverse-proxy/templates/alb_server.conf.erb
+++ b/dockerfiles/reverse-proxy/templates/alb_server.conf.erb
@@ -25,6 +25,7 @@ server {
     proxy_set_header Connection "upgrade";
     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    proxy_set_header X-Forwarded-Port  $http_x_forwarded_port;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
