--- a/dockerfiles/reverse-proxy/templates/nginx.conf.erb
+++ b/dockerfiles/reverse-proxy/templates/nginx.conf.erb
@@ -12,7 +12,7 @@ http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
 
-  log_format main '$proxy_protocol_addr - $remote_user [$time_local] '
+  log_format main '$proxy_protocol_addr - [$time_local] '
                   '"$request" $status $body_bytes_sent '
                   '"$http_referer" "$http_user_agent"';
   access_log    /var/log/nginx/access.log main;
