--- a/dockerfiles/reverse-proxy/templates/nginx.conf.erb
+++ b/dockerfiles/reverse-proxy/templates/nginx.conf.erb
@@ -4,6 +4,9 @@ worker_processes auto;
 error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
+load_module modules/ngx_http_js_module.so;
+load_module modules/ngx_stream_js_module.so;
+
 events {
   worker_connections  1024;
 }
@@ -12,10 +15,15 @@ http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
 
-  log_format main '$proxy_protocol_addr - [$time_local] '
+  js_include maskQueryParams.js;
+  js_set $request_uri_masked maskQueryParams;
+  <%# log_format main '$proxy_protocol_addr - [$time_local] '
                   '"$request" $status $body_bytes_sent '
-                  '"$http_referer" "$http_user_agent"';
-  access_log    /var/log/nginx/access.log main;
+                  '"$http_referer" "$http_user_agent"';%>
+
+  log_format main <%= log_format %>;
+
+  access_log /var/log/nginx/access.log  main;
 
   sendfile on;
   tcp_nopush on;
