Optionally disable query param logging
Because we have GDPR requirements to be able to delete a users
personally identifiable information (PII) and some of that information
(like email addresses) could be passed into our systems as query
parameters, we want the ability to disable Nginx query parameter
logging. This is a lot easier than trying to identify all possible
instances of PII that come into our systems and filter them out
explicitly.

--- a/dockerfiles/reverse-proxy/templates/nginx.conf.erb
+++ b/dockerfiles/reverse-proxy/templates/nginx.conf.erb
@@ -12,9 +12,7 @@ http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
 
-  log_format main '$proxy_protocol_addr - [$time_local] '
-                  '"$request" $status $body_bytes_sent '
-                  '"$http_referer" "$http_user_agent"';
+  log_format main <%= log_format %>;
   access_log    /var/log/nginx/access.log main;
 
   sendfile on;
