--- a/app/views/status/_district.html.erb
+++ b/app/views/status/_district.html.erb
@@ -51,6 +51,14 @@
       <%= @obj.cluster_instance_type %>
     </td>
   </tr>
+  <tr>
+    <td>
+      Cluster Size
+    </td>
+    <td>
+      <%= @obj.cluster_size %>
+    </td>
+  </tr>
 </table>
 
 <h2>Endpoints</h2>
