--- a/app/views/status/_heritage.html.erb
+++ b/app/views/status/_heritage.html.erb
@@ -77,6 +77,9 @@
       <td>
         <pre><%= s.command %></pre>
       </td>
+      <td>
+        <pre><%= s.desired_container_count %></pre>
+      </td>
     </tr>
   <% end %>
 </table>
